--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portofolio - Nama Saya</title>
+    <title>Portofolio - Anas Nurhidayat</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Montserrat:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -28,7 +28,7 @@
 
     <!-- Header Section -->
     <header class="profile-section" id="home">
-        <img src="Aku.jpeg" alt="Foto Profil" class="profile-img">
+        <img src="assets/gambar/Aku.jpeg" alt="Foto Profil" class="profile-img">
         <h1>ANAS NURHIDAYAT</h1>
         <p class="subtitle">Mahasiswa Teknologi Informasi | Pengembang Web Full-Stack</p>
     </header>
@@ -37,7 +37,7 @@
     <section class="about-section" id="about">
         <h2>Tentang Saya</h2>
         <div class="about-content">
-            <p>Saya sangat tertarik dengan Pengembangan Front End dan telah mempelajari berbagai aspek pengembangan front-end selama sekitar 3 tahun. Sepanjang perjalanan belajar saya, saya telah mengembangkan keahlian dalam teknologi utama seperti HTML, PHP, PHP MySQL, Figma, dan Laravel. Saya berpengalaman dalam mendesain dan mengembangkan antarmuka pengguna yang responsif dan dinamis, dan saya bekerja dengan berbagai alat dan kerangka kerja untuk membuat aplikasi yang efisien dan ramah pengguna. Keterampilan saya dalam PHP dan MySQL juga memungkinkan saya untuk mengembangkan aplikasi web yang terintegrasi dengan baik dan berkinerja tinggi. Saya berkomitmen untuk terus tumbuh dan beradaptasi dengan tren dan teknologi terbaru dalam pengembangan web.</p>
+            <p>Saya sangat tertarik dengan Pengembangan Sistem Informasi dan telah mempelajari berbagai aspek pengembangan front-end dan back-end menggunakan framework Laravel selama sekitar 2 tahun. Sepanjang perjalanan belajar saya, saya telah mengembangkan keahlian dalam teknologi utama seperti HTML, PHP, PHP MySQL, dan Figma. Saya berpengalaman dalam mendesain dan mengembangkan antarmuka pengguna yang responsif dan dinamis, serta bekerja dengan berbagai alat dan kerangka kerja untuk membuat aplikasi yang efisien dan ramah pengguna. Keterampilan saya dalam PHP dan MySQL memungkinkan saya mengembangkan aplikasi web yang terintegrasi dengan baik dan berkinerja tinggi. Saya berkomitmen untuk terus tumbuh dan beradaptasi dengan tren dan teknologi terbaru dalam pengembangan web.</p>
         </div>
     </section>
 
@@ -112,11 +112,13 @@
     <section class="projects-section" id="projects">
         <h2>Proyek</h2>
         <div class="projects-container">
+
+            <!-- Proyek 1 -->
             <div class="project-card">
-                <img src="kompen.png" alt="Proyek JTI-SIMPEN">
+                <img src="assets/gambar/kompen.png" alt="Proyek JTI-SIMPEN">
                 <div class="project-info">
                     <h3>Platform JTI-SIMPEN</h3>
-                    <p>Mengembangkan aplikasi JTI-SIMPEN full-stack dengan menggunakan framework Laravel dan menggunakan Database MySQL.</p>
+                    <p>Mengembangkan aplikasi JTI-SIMPEN full-stack dengan menggunakan framework Laravel dan basis data MySQL.</p>
                     <button class="project-toggle" data-target="project1-details">Detail</button>
                     <div class="project-details" id="project1-details">
                         <p>Aplikasi JTI-SIMPEN adalah platform manajemen kompensasi berbasis web yang dirancang untuk mempermudah pengelolaan data kompensasi mahasiswa. Fitur utama meliputi:</p>
@@ -130,8 +132,10 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Proyek 2 -->
             <div class="project-card">
-                <img src="websurvey.png" alt="Proyek Inventaris">
+                <img src="assets/gambar/websurvey.png" alt="Sistem Survey Kepuasan Pelanggan">
                 <div class="project-info">
                     <h3>Sistem Survey Kepuasan Pelanggan</h3>
                     <p>Aplikasi berbasis web untuk manajemen survey kepuasan pelanggan dengan dashboard interaktif menggunakan MySQL dan Laravel.</p>
@@ -148,11 +152,13 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Proyek 3 -->
             <div class="project-card">
-                <img src="cathouse.png" alt="Proyek Portofolio">
+                <img src="assets/gambar/cathouse.png" alt="Website Adopsi Kucing">
                 <div class="project-info">
                     <h3>Website Adopsi Kucing</h3>
-                    <p>Merancang portofolio responsif dengan desain modern menggunakan HTML, CSS, dan JavaScript.</p>
+                    <p>Website adopsi kucing dengan desain modern menggunakan HTML, CSS, dan JavaScript.</p>
                     <button class="project-toggle" data-target="project3-details">Detail</button>
                     <div class="project-details" id="project3-details">
                         <p>Website ini bertujuan untuk memfasilitasi adopsi kucing dengan antarmuka yang ramah pengguna. Fitur utama meliputi:</p>
@@ -166,6 +172,28 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Proyek 4: Sistem Informasi Kepegawaian BNN -->
+            <div class="project-card">
+                <img src="assets/gambar/DashboardPegawai.png" alt="Sistem Informasi Kepegawaian BNN">
+                <div class="project-info">
+                    <h3>Sistem Informasi Kepegawaian BNN</h3>
+                    <p>Sistem terintegrasi untuk presensi pegawai, pengajuan cuti, dan Kenaikan Gaji Berkala (KGP) yang dibangun menggunakan Laravel 12.</p>
+                    <button class="project-toggle" data-target="project4-details">Detail</button>
+                    <div class="project-details" id="project4-details">
+                        <p>Sistem Kepegawaian BNN adalah aplikasi internal yang mendigitalisasi proses administrasi pegawai di BNN Kota Kediri. Fitur utama meliputi:</p>
+                        <ul>
+                            <li>Presensi pegawai dengan kamera dan lokasi GPS berbasis Leaflet Maps.</li>
+                            <li>Pengajuan cuti dengan perhitungan jatah, terpakai, dan sisa cuti secara otomatis.</li>
+                            <li>Pengajuan Kenaikan Gaji Berkala (KGP) berdasarkan masa kerja dan tahapan kelayakan.</li>
+                            <li>Dashboard pegawai yang menampilkan ringkasan presensi dan informasi cuti.</li>
+                            <li>Halaman login yang aman dengan pemisahan role Admin dan Pegawai.</li>
+                        </ul>
+                        <p>Proyek ini dikembangkan selama masa magang menggunakan Laravel 12, MySQL, dan desain antarmuka yang responsif agar mudah digunakan pegawai BNN.</p>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </section>
 
@@ -173,7 +201,7 @@
     <section class="contact-section" id="contact">
         <h2>Kontak</h2>
         <div class="contact-container">
-            <p>Email: <a href="mailto:nama.saya@example.com">2241760068@student.polinema.ac.id</a></p>
+            <p>Email: <a href="mailto:2241760068@student.polinema.ac.id">2241760068@student.polinema.ac.id</a></p>
             <p>LinkedIn: <a href="https://linkedin.com/in/anasnurhidayat" target="_blank">linkedin.com/in/anasnurhidayat</a></p>
             <p>GitHub: <a href="https://github.com/anasnh23" target="_blank">github.com/anasnh23</a></p>
         </div>
