--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-    <!-- Navigation -->
+
+    <!-- Navbar -->
     <nav class="navbar">
         <div class="logo">MY-Portofolio</div>
         <ul class="nav-links">
@@ -20,176 +21,149 @@
             <li><a href="#contact">Kontak</a></li>
         </ul>
         <div class="hamburger">
-            <span></span>
-            <span></span>
-            <span></span>
+            <span></span><span></span><span></span>
         </div>
     </nav>
 
-    <!-- Header Section -->
+    <!-- Header -->
     <header class="profile-section" id="home">
         <img src="assets/gambar/Aku.jpeg" alt="Foto Profil" class="profile-img">
         <h1>ANAS NURHIDAYAT</h1>
         <p class="subtitle">Mahasiswa Teknologi Informasi | Pengembang Web Full-Stack</p>
     </header>
 
-    <!-- About Section -->
+    <!-- About -->
     <section class="about-section" id="about">
         <h2>Tentang Saya</h2>
         <div class="about-content">
-            <p>Saya sangat tertarik dengan Pengembangan Sistem Informasi dan telah mempelajari berbagai aspek pengembangan front-end dan back-end menggunakan framework Laravel selama sekitar 2 tahun. Sepanjang perjalanan belajar saya, saya telah mengembangkan keahlian dalam teknologi utama seperti HTML, PHP, PHP MySQL, dan Figma. Saya berpengalaman dalam mendesain dan mengembangkan antarmuka pengguna yang responsif dan dinamis, serta bekerja dengan berbagai alat dan kerangka kerja untuk membuat aplikasi yang efisien dan ramah pengguna. Keterampilan saya dalam PHP dan MySQL memungkinkan saya mengembangkan aplikasi web yang terintegrasi dengan baik dan berkinerja tinggi. Saya berkomitmen untuk terus tumbuh dan beradaptasi dengan tren dan teknologi terbaru dalam pengembangan web.</p>
+            <p>
+                Saya sangat tertarik dengan sistem informasi dan telah mengembangkan berbagai aplikasi
+                menggunakan Laravel, MySQL, JavaScript, dan teknologi front-end lainnya. Saya juga aktif
+                mengembangkan sistem administrasi kepegawaian selama magang di BNN Kota Kediri.
+            </p>
         </div>
     </section>
 
-    <!-- Skills Section -->
+    <!-- Skills -->
     <section class="skills-section" id="skills">
         <h2>Keterampilan</h2>
+
         <div class="skills-container">
+
             <div class="skill-card">
                 <i class="fas fa-code skill-icon"></i>
                 <h3>Pengembangan Web</h3>
-                <div class="skill-item">
-                    <p>HTML5 & CSS3</p>
-                    <div class="progress-bar"><div class="progress" data-progress="90"></div></div>
-                </div>
-                <div class="skill-item">
-                    <p>JavaScript & React.js</p>
-                    <div class="progress-bar"><div class="progress" data-progress="85"></div></div>
-                </div>
-                <div class="skill-item">
-                    <p>Laravel Filament</p>
-                    <div class="progress-bar"><div class="progress" data-progress="80"></div></div>
-                </div>
+                <div class="skill-item"><p>HTML5 & CSS3</p><div class="progress-bar"><div class="progress" data-progress="90"></div></div></div>
+                <div class="skill-item"><p>JavaScript & React.js</p><div class="progress-bar"><div class="progress" data-progress="85"></div></div></div>
+                <div class="skill-item"><p>Laravel</p><div class="progress-bar"><div class="progress" data-progress="80"></div></div></div>
             </div>
+
             <div class="skill-card">
                 <i class="fas fa-database skill-icon"></i>
                 <h3>Basis Data</h3>
-                <div class="skill-item">
-                    <p>MySQL</p>
-                    <div class="progress-bar"><div class="progress" data-progress="85"></div></div>
-                </div>
-                <div class="skill-item">
-                    <p>MongoDB</p>
-                    <div class="progress-bar"><div class="progress" data-progress="80"></div></div>
-                </div>
-                <div class="skill-item">
-                    <p>Firebase</p>
-                    <div class="progress-bar"><div class="progress" data-progress="75"></div></div>
-                </div>
+                <div class="skill-item"><p>MySQL</p><div class="progress-bar"><div class="progress" data-progress="85"></div></div></div>
+                <div class="skill-item"><p>MongoDB</p><div class="progress-bar"><div class="progress" data-progress="80"></div></div></div>
+                <div class="skill-item"><p>Firebase</p><div class="progress-bar"><div class="progress" data-progress="75"></div></div></div>
             </div>
+
             <div class="skill-card">
                 <i class="fas fa-tools skill-icon"></i>
                 <h3>Alat & Teknologi</h3>
-                <div class="skill-item">
-                    <p>Git & GitHub</p>
-                    <div class="progress-bar"><div class="progress" data-progress="90"></div></div>
-                </div>
-                <div class="skill-item">
-                    <p>REST API</p>
-                    <div class="progress-bar"><div class="progress" data-progress="80"></div></div>
-                </div>
+                <div class="skill-item"><p>Git & GitHub</p><div class="progress-bar"><div class="progress" data-progress="90"></div></div></div>
+                <div class="skill-item"><p>REST API</p><div class="progress-bar"><div class="progress" data-progress="80"></div></div></div>
             </div>
-            <div class="skill-card">
-                <i class="fas fa-paint-brush skill-icon"></i>
-                <h3>Desain UI/UX</h3>
-                <div class="skill-item">
-                    <p>Figma</p>
-                    <div class="progress-bar"><div class="progress" data-progress="85"></div></div>
-                </div>
-                <div class="skill-item">
-                    <p>Adobe XD</p>
-                    <div class="progress-bar"><div class="progress" data-progress="80"></div></div>
-                </div>
-                <div class="skill-item">
-                    <p>Prototyping</p>
-                    <div class="progress-bar"><div class="progress" data-progress="75"></div></div>
-                </div>
-            </div>
+
         </div>
     </section>
 
-    <!-- Projects Section -->
+    <!-- Projects -->
     <section class="projects-section" id="projects">
         <h2>Proyek</h2>
+
         <div class="projects-container">
 
-            <!-- Proyek 1 -->
+            <!-- Project 1 -->
             <div class="project-card">
-                <img src="assets/gambar/kompen.png" alt="Proyek JTI-SIMPEN">
+                <img src="assets/gambar/kompen.png" alt="Platform JTI-SIMPEN">
                 <div class="project-info">
                     <h3>Platform JTI-SIMPEN</h3>
-                    <p>Mengembangkan aplikasi JTI-SIMPEN full-stack dengan menggunakan framework Laravel dan basis data MySQL.</p>
-                    <button class="project-toggle" data-target="project1-details">Detail</button>
-                    <div class="project-details" id="project1-details">
-                        <p>Aplikasi JTI-SIMPEN adalah platform manajemen kompensasi berbasis web yang dirancang untuk mempermudah pengelolaan data kompensasi mahasiswa. Fitur utama meliputi:</p>
+                    <p>Aplikasi manajemen kompensasi mahasiswa berbasis Laravel & MySQL.</p>
+                    <button class="project-toggle" data-target="p1">Detail</button>
+
+                    <div class="project-details" id="p1">
+                        <p>Fitur:</p>
                         <ul>
-                            <li>Dashboard interaktif untuk admin dan pengguna.</li>
-                            <li>Manajemen data kompensasi dengan CRUD lengkap.</li>
-                            <li>Integrasi dengan MySQL untuk penyimpanan data yang aman.</li>
-                            <li>Antarmuka responsif menggunakan Laravel dan Tailwind CSS.</li>
+                            <li>CRUD kompensasi</li>
+                            <li>Dashboard admin</li>
+                            <li>Export laporan</li>
                         </ul>
-                        <p>Proyek ini selesai dalam 3 bulan dengan fokus pada efisiensi dan keamanan data.</p>
                     </div>
                 </div>
             </div>
 
-            <!-- Proyek 2 -->
+            <!-- Project 2 -->
             <div class="project-card">
-                <img src="assets/gambar/websurvey.png" alt="Sistem Survey Kepuasan Pelanggan">
+                <img src="assets/gambar/websurvey.png" alt="Survey Kepuasan Pelanggan">
                 <div class="project-info">
-                    <h3>Sistem Survey Kepuasan Pelanggan</h3>
-                    <p>Aplikasi berbasis web untuk manajemen survey kepuasan pelanggan dengan dashboard interaktif menggunakan MySQL dan Laravel.</p>
-                    <button class="project-toggle" data-target="project2-details">Detail</button>
-                    <div class="project-details" id="project2-details">
-                        <p>Sistem ini dirancang untuk mengumpulkan dan menganalisis umpan balik pelanggan secara efisien. Fitur utama meliputi:</p>
+                    <h3>Sistem Survey Kepuasan</h3>
+                    <p>Dashboard analitik feedback pelanggan.</p>
+                    <button class="project-toggle" data-target="p2">Detail</button>
+
+                    <div class="project-details" id="p2">
+                        <p>Fitur:</p>
                         <ul>
-                            <li>Pembuatan survey dinamis dengan berbagai tipe pertanyaan.</li>
-                            <li>Visualisasi data survey melalui grafik interaktif.</li>
-                            <li>Integrasi dengan Laravel untuk backend yang kuat.</li>
-                            <li>Pengelolaan data menggunakan MySQL dengan performa tinggi.</li>
+                            <li>Pembuatan survey</li>
+                            <li>Grafik analisis</li>
+                            <li>Export hasil survey</li>
                         </ul>
-                        <p>Proyek ini membantu bisnis meningkatkan kepuasan pelanggan berdasarkan data real-time.</p>
                     </div>
                 </div>
             </div>
 
-            <!-- Proyek 3 -->
+            <!-- Project 3 -->
             <div class="project-card">
                 <img src="assets/gambar/cathouse.png" alt="Website Adopsi Kucing">
                 <div class="project-info">
                     <h3>Website Adopsi Kucing</h3>
-                    <p>Website adopsi kucing dengan desain modern menggunakan HTML, CSS, dan JavaScript.</p>
-                    <button class="project-toggle" data-target="project3-details">Detail</button>
-                    <div class="project-details" id="project3-details">
-                        <p>Website ini bertujuan untuk memfasilitasi adopsi kucing dengan antarmuka yang ramah pengguna. Fitur utama meliputi:</p>
+                    <p>Website adopsi kucing modern dengan JavaScript.</p>
+                    <button class="project-toggle" data-target="p3">Detail</button>
+
+                    <div class="project-details" id="p3">
+                        <p>Fitur:</p>
                         <ul>
-                            <li>Galeri kucing dengan filter berdasarkan usia dan jenis.</li>
-                            <li>Formulir adopsi interaktif dengan validasi client-side.</li>
-                            <li>Desain responsif menggunakan CSS Grid dan Flexbox.</li>
-                            <li>Animasi halus menggunakan JavaScript untuk pengalaman pengguna yang lebih baik.</li>
+                            <li>Galeri kucing</li>
+                            <li>Formulir adopsi</li>
                         </ul>
-                        <p>Proyek ini menunjukkan kemampuan saya dalam desain front-end yang menarik dan fungsional.</p>
                     </div>
                 </div>
             </div>
 
-            <!-- Proyek 4: Sistem Informasi Kepegawaian BNN -->
+            <!-- Project 4 — Kepegawaian BNN -->
             <div class="project-card">
-                <img src="assets/gambar/DashboardPegawai.png" alt="Sistem Informasi Kepegawaian BNN">
+                <img src="assets/gambar/DashboardPegawai.png" alt="Sistem Kepegawaian">
                 <div class="project-info">
                     <h3>Sistem Informasi Kepegawaian BNN</h3>
-                    <p>Sistem terintegrasi untuk presensi pegawai, pengajuan cuti, dan Kenaikan Gaji Berkala (KGP) yang dibangun menggunakan Laravel 12.</p>
-                    <button class="project-toggle" data-target="project4-details">Detail</button>
-                    <div class="project-details" id="project4-details">
-                        <p>Sistem Kepegawaian BNN adalah aplikasi internal yang mendigitalisasi proses administrasi pegawai di BNN Kota Kediri. Fitur utama meliputi:</p>
+                    <p>Sistem presensi, cuti, dan KGP pegawai berbasis Laravel 12.</p>
+
+                    <button class="project-toggle" data-target="p4">Detail</button>
+
+                    <div class="project-details" id="p4">
+                        <p>Fitur utama:</p>
                         <ul>
-                            <li>Presensi pegawai dengan kamera dan lokasi GPS berbasis Leaflet Maps.</li>
-                            <li>Pengajuan cuti dengan perhitungan jatah, terpakai, dan sisa cuti secara otomatis.</li>
-                            <li>Pengajuan Kenaikan Gaji Berkala (KGP) berdasarkan masa kerja dan tahapan kelayakan.</li>
-                            <li>Dashboard pegawai yang menampilkan ringkasan presensi dan informasi cuti.</li>
-                            <li>Halaman login yang aman dengan pemisahan role Admin dan Pegawai.</li>
+                            <li>Presensi GPS + Kamera</li>
+                            <li>Pengajuan cuti otomatis</li>
+                            <li>Pengajuan Kenaikan Gaji Berkala</li>
                         </ul>
-                        <p>Proyek ini dikembangkan selama masa magang menggunakan Laravel 12, MySQL, dan desain antarmuka yang responsif agar mudah digunakan pegawai BNN.</p>
+
+                        <!-- GALLERY -->
+                        <div class="project-gallery">
+                            <img src="assets/gambar/Login.png" class="gallery-thumb" alt="Login SIAP-BNN">
+                            <img src="assets/gambar/Presensi.png" class="gallery-thumb" alt="Presensi Pegawai">
+                            <img src="assets/gambar/cuti.png" class="gallery-thumb" alt="Pengajuan Cuti Pegawai">
+                            <img src="assets/gambar/kgp.png" class="gallery-thumb" alt="Halaman Pengajuan KGP">
+                        </div>
+
+                        <p>Sistem ini digunakan selama magang di BNN Kota Kediri.</p>
                     </div>
                 </div>
             </div>
@@ -197,20 +171,25 @@
         </div>
     </section>
 
-    <!-- Contact Section -->
+    <!-- Contact -->
     <section class="contact-section" id="contact">
         <h2>Kontak</h2>
-        <div class="contact-container">
-            <p>Email: <a href="mailto:2241760068@student.polinema.ac.id">2241760068@student.polinema.ac.id</a></p>
-            <p>LinkedIn: <a href="https://linkedin.com/in/anasnurhidayat" target="_blank">linkedin.com/in/anasnurhidayat</a></p>
-            <p>GitHub: <a href="https://github.com/anasnh23" target="_blank">github.com/anasnh23</a></p>
-        </div>
+        <p>Email: <a href="mailto:2241760068@student.polinema.ac.id">2241760068@student.polinema.ac.id</a></p>
+        <p>LinkedIn: <a href="https://linkedin.com/in/anasnurhidayat" target="_blank">linkedin.com/in/anasnurhidayat</a></p>
+        <p>GitHub: <a href="https://github.com/anasnh23" target="_blank">github.com/anasnh23</a></p>
     </section>
 
     <!-- Footer -->
     <footer>
-        <p>© 2025 Anas Nurhidayat. All Rights Reserved.</p>
+        © 2025 Anas Nurhidayat. All Rights Reserved.
     </footer>
+
+    <!-- Modal Preview Image -->
+    <div class="image-modal" id="imageModal">
+        <span class="image-modal-close">&times;</span>
+        <img class="image-modal-content" id="imageModalImg">
+        <div class="image-modal-caption" id="imageModalCaption"></div>
+    </div>
 
     <script src="script.js"></script>
 </body>
