--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
             <!-- Project 4 — Kepegawaian BNN -->
             <div class="project-card">
-                <img src="assets/gambar/DashboardPegawai.png" alt="Sistem Kepegawaian">
+                <img src="assets/gambar/Login.png" alt="Sistem Kepegawaian">
                 <div class="project-info">
                     <h3>Sistem Informasi Kepegawaian BNN</h3>
                     <p>Sistem presensi, cuti, dan KGP pegawai berbasis Laravel 12.</p>
@@ -157,13 +157,46 @@
 
                         <!-- GALLERY -->
                         <div class="project-gallery">
-                            <img src="assets/gambar/Login.png" class="gallery-thumb" alt="Login SIAP-BNN">
+                            <img src="assets/gambar/DashboardPegawai.png" class="gallery-thumb" alt="Dashboard Pegawai SIAP-BNN">
                             <img src="assets/gambar/Presensi.png" class="gallery-thumb" alt="Presensi Pegawai">
                             <img src="assets/gambar/cuti.png" class="gallery-thumb" alt="Pengajuan Cuti Pegawai">
                             <img src="assets/gambar/kgp.png" class="gallery-thumb" alt="Halaman Pengajuan KGP">
                         </div>
 
                         <p>Sistem ini digunakan selama magang di BNN Kota Kediri.</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Project 5 — Website Verifikasi Device Email (IMAP) -->
+            <div class="project-card">
+                <img src="assets/gambar/LoginVerif.png" alt="Login Website Verifikasi Device">
+                <div class="project-info">
+                    <h3>Website Verifikasi Device Email</h3>
+                    <p>Aplikasi verifikasi perangkat menggunakan OTP yang dikirim ke email dan dibaca otomatis via IMAP.</p>
+
+                    <button class="project-toggle" data-target="p5">Detail</button>
+
+                    <div class="project-details" id="p5">
+                        <p>Website ini digunakan untuk memverifikasi login device baru dengan kode OTP yang dikirimkan ke email user, kemudian diverifikasi secara otomatis menggunakan protokol IMAP.</p>
+                        <p>Fitur utama:</p>
+                        <ul>
+                            <li>Form login dengan input email & password.</li>
+                            <li>Pengiriman kode verifikasi (OTP) ke email terdaftar.</li>
+                            <li>Pembacaan email OTP menggunakan IMAP dan validasi kode.</li>
+                            <li>Pencatatan histori verifikasi device.</li>
+                        </ul>
+
+                        <!-- Galeri Verifikasi Device -->
+                        <div class="project-gallery">
+                            <img src="assets/gambar/LoginVerif.png" class="gallery-thumb" alt="Halaman Login Verifikasi Device">
+                            <img src="assets/gambar/verificationCode.png" class="gallery-thumb" alt="Halaman Input & Verifikasi Kode OTP">
+                        </div>
+
+                        <p>
+                            Demo website dapat diakses melalui:
+                            <a href="https://otphh.cloud" target="_blank" rel="noopener noreferrer">otphh.cloud</a>
+                        </p>
                     </div>
                 </div>
             </div>
@@ -187,7 +220,7 @@
     <!-- Modal Preview Image -->
     <div class="image-modal" id="imageModal">
         <span class="image-modal-close">&times;</span>
-        <img class="image-modal-content" id="imageModalImg">
+        <img class="image-modal-content" id="imageModalImg" alt="">
         <div class="image-modal-caption" id="imageModalCaption"></div>
     </div>
 
