--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 
     <!-- Footer -->
     <footer>
-        © 2025 Anas Nurhidayat. All Rights Reserved.
+        © 2025 Anas Nurhidayat. All Rights Reservede.
     </footer>
 
     <!-- Modal Preview Image -->
