index update final

--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@
         <h2>Tentang Saya</h2>
         <div class="about-content">
             <p>
-                Saya sangat tertarik dengan sistem informasi dan telah mengembangkan berbagai aplikasi
-                menggunakan Laravel, MySQL, JavaScript, dan teknologi front-end lainnya. Saya juga aktif
-                mengembangkan sistem administrasi kepegawaian selama magang di BNN Kota Kediri.
+                Saya sangat tertarik dengan pengembangan sistem informasi dan telah mengerjakan berbagai proyek
+                berbasis web menggunakan Laravel, MySQL, JavaScript, dan teknologi front-end lainnya. Selain itu,
+                saya berpengalaman sebagai system analyst dan full-stack developer pada beberapa proyek internal
+                instansi maupun produk komersial.
             </p>
         </div>
     </section>
@@ -93,9 +94,9 @@
                     <div class="project-details" id="p1">
                         <p>Fitur:</p>
                         <ul>
-                            <li>CRUD kompensasi</li>
-                            <li>Dashboard admin</li>
-                            <li>Export laporan</li>
+                            <li>CRUD kompensasi dan pengelolaan data mahasiswa.</li>
+                            <li>Dashboard admin untuk monitoring beban kompensasi.</li>
+                            <li>Export laporan dalam format yang siap dilaporkan.</li>
                         </ul>
                     </div>
                 </div>
@@ -106,15 +107,15 @@
                 <img src="assets/gambar/websurvey.png" alt="Survey Kepuasan Pelanggan">
                 <div class="project-info">
                     <h3>Sistem Survey Kepuasan</h3>
-                    <p>Dashboard analitik feedback pelanggan.</p>
+                    <p>Dashboard analitik feedback pelanggan untuk pengambilan keputusan berbasis data.</p>
                     <button class="project-toggle" data-target="p2">Detail</button>
 
                     <div class="project-details" id="p2">
                         <p>Fitur:</p>
                         <ul>
-                            <li>Pembuatan survey</li>
-                            <li>Grafik analisis</li>
-                            <li>Export hasil survey</li>
+                            <li>Pembuatan survey dinamis dengan berbagai tipe pertanyaan.</li>
+                            <li>Visualisasi data hasil survey melalui grafik interaktif.</li>
+                            <li>Export data untuk analisis lanjutan.</li>
                         </ul>
                     </div>
                 </div>
@@ -125,14 +126,14 @@
                 <img src="assets/gambar/cathouse.png" alt="Website Adopsi Kucing">
                 <div class="project-info">
                     <h3>Website Adopsi Kucing</h3>
-                    <p>Website adopsi kucing modern dengan JavaScript.</p>
+                    <p>Website adopsi kucing dengan antarmuka modern dan fokus pada pengalaman pengguna.</p>
                     <button class="project-toggle" data-target="p3">Detail</button>
 
                     <div class="project-details" id="p3">
                         <p>Fitur:</p>
                         <ul>
-                            <li>Galeri kucing</li>
-                            <li>Formulir adopsi</li>
+                            <li>Galeri kucing dengan informasi detail.</li>
+                            <li>Formulir adopsi online.</li>
                         </ul>
                     </div>
                 </div>
@@ -150,9 +151,9 @@
                     <div class="project-details" id="p4">
                         <p>Fitur utama:</p>
                         <ul>
-                            <li>Presensi GPS + Kamera</li>
-                            <li>Pengajuan cuti otomatis</li>
-                            <li>Pengajuan Kenaikan Gaji Berkala</li>
+                            <li>Presensi pegawai berbasis GPS dan kamera.</li>
+                            <li>Pengajuan dan persetujuan cuti secara digital.</li>
+                            <li>Perhitungan dan pengajuan Kenaikan Gaji Berkala.</li>
                         </ul>
 
                         <!-- GALLERY -->
@@ -163,7 +164,7 @@
                             <img src="assets/gambar/kgp.png" class="gallery-thumb" alt="Halaman Pengajuan KGP">
                         </div>
 
-                        <p>Sistem ini digunakan selama magang di BNN Kota Kediri.</p>
+                        <p>Sistem ini digunakan selama masa magang di BNN Kota Kediri.</p>
                     </div>
                 </div>
             </div>
@@ -201,20 +202,65 @@
                 </div>
             </div>
 
+            <!-- Project 6 — Cidika Travel Open Trip (Multilingual) -->
+            <div class="project-card">
+                <img src="assets/gambar/landingPage.png" alt="Landing Page Cidika Travel">
+                <div class="project-info">
+                    <h3>Cidika Travel – Website Open Trip Multibahasa</h3>
+                    <p>Platform open trip internasional dengan dukungan bahasa Indonesia, Inggris, dan Jepang.</p>
+
+                    <button class="project-toggle" data-target="p6">Detail</button>
+
+                    <div class="project-details" id="p6">
+                        <p>
+                            Pada proyek ini saya berperan sebagai <strong>System Analyst</strong> untuk merancang alur bisnis,
+                            struktur halaman, dan kebutuhan sistem Cidika Travel – sebuah website open trip yang menyasar
+                            pasar internasional dengan tiga bahasa: Indonesia, Inggris, dan Jepang.
+                        </p>
+
+                        <p>Highlight fitur dari sisi analisis dan perancangan:</p>
+                        <ul>
+                            <li>Perancangan arsitektur informasi untuk katalog paket wisata multi-destinasi.</li>
+                            <li>Definisi flow pemesanan (booking flow) dari landing page hingga pembayaran.</li>
+                            <li>Rancangan modul multi-language (ID / EN / JP) untuk konten paket dan halaman utama.</li>
+                            <li>Kolaborasi dengan tim front-end & back-end untuk memastikan implementasi sesuai kebutuhan bisnis.</li>
+                        </ul>
+
+                        <!-- Galeri Cidika Travel -->
+                        <div class="project-gallery">
+                            <img src="assets/gambar/landingPage.png" class="gallery-thumb" alt="Landing Page Cidika Travel">
+                            <img src="assets/gambar/Paket.png" class="gallery-thumb" alt="Halaman Daftar Paket Open Trip">
+                            <img src="assets/gambar/detail.png" class="gallery-thumb" alt="Halaman Detail Paket Cidika Travel">
+                        </div>
+
+                        <p>
+                            Website live dapat diakses melalui:
+                            <a href="https://cidikatravel.com/" target="_blank" rel="noopener noreferrer">cidikatravel.com</a>
+                        </p>
+                        <p>
+                            Bahasa yang didukung:
+                            <strong>Bahasa Indonesia</strong>, <strong>English</strong>, dan <strong>日本語 (Japanese)</strong>.
+                        </p>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </section>
 
     <!-- Contact -->
     <section class="contact-section" id="contact">
         <h2>Kontak</h2>
-        <p>Email: <a href="mailto:2241760068@student.polinema.ac.id">2241760068@student.polinema.ac.id</a></p>
-        <p>LinkedIn: <a href="https://linkedin.com/in/anasnurhidayat" target="_blank">linkedin.com/in/anasnurhidayat</a></p>
-        <p>GitHub: <a href="https://github.com/anasnh23" target="_blank">github.com/anasnh23</a></p>
+        <div class="contact-container">
+            <p>Email: <a href="mailto:2241760068@student.polinema.ac.id">2241760068@student.polinema.ac.id</a></p>
+            <p>LinkedIn: <a href="https://linkedin.com/in/anasnurhidayat" target="_blank">linkedin.com/in/anasnurhidayat</a></p>
+            <p>GitHub: <a href="https://github.com/anasnh23" target="_blank">github.com/anasnh23</a></p>
+        </div>
     </section>
 
     <!-- Footer -->
     <footer>
-        © 2025 Anas Nurhidayat. All Rights Reservede.
+        © 2025 Anas Nurhidayat. All Rights Reserved.
     </footer>
 
     <!-- Modal Preview Image -->
