--- a/index.html
+++ b/index.html
@@ -87,8 +87,19 @@
             <div class="project-card">
                 <img src="assets/gambar/kompen.png" alt="Platform JTI-SIMPEN">
                 <div class="project-info">
-                    <h3>Platform JTI-SIMPEN</h3>
+                    <div class="project-header">
+                        <h3>Platform JTI-SIMPEN</h3>
+                        <span class="project-badge academic">Academic</span>
+                    </div>
+
                     <p>Aplikasi manajemen kompensasi mahasiswa berbasis Laravel & MySQL.</p>
+
+                    <div class="tech-stack">
+                        <span class="tech-chip">Laravel</span>
+                        <span class="tech-chip">MySQL</span>
+                        <span class="tech-chip">Tailwind CSS</span>
+                    </div>
+
                     <button class="project-toggle" data-target="p1">Detail</button>
 
                     <div class="project-details" id="p1">
@@ -106,8 +117,19 @@
             <div class="project-card">
                 <img src="assets/gambar/websurvey.png" alt="Survey Kepuasan Pelanggan">
                 <div class="project-info">
-                    <h3>Sistem Survey Kepuasan</h3>
+                    <div class="project-header">
+                        <h3>Sistem Survey Kepuasan</h3>
+                        <span class="project-badge academic">Academic</span>
+                    </div>
+
                     <p>Dashboard analitik feedback pelanggan untuk pengambilan keputusan berbasis data.</p>
+
+                    <div class="tech-stack">
+                        <span class="tech-chip">Laravel</span>
+                        <span class="tech-chip">MySQL</span>
+                        <span class="tech-chip">Chart.js</span>
+                    </div>
+
                     <button class="project-toggle" data-target="p2">Detail</button>
 
                     <div class="project-details" id="p2">
@@ -125,8 +147,19 @@
             <div class="project-card">
                 <img src="assets/gambar/cathouse.png" alt="Website Adopsi Kucing">
                 <div class="project-info">
-                    <h3>Website Adopsi Kucing</h3>
+                    <div class="project-header">
+                        <h3>Website Adopsi Kucing</h3>
+                        <span class="project-badge personal">Personal</span>
+                    </div>
+
                     <p>Website adopsi kucing dengan antarmuka modern dan fokus pada pengalaman pengguna.</p>
+
+                    <div class="tech-stack">
+                        <span class="tech-chip">HTML</span>
+                        <span class="tech-chip">CSS</span>
+                        <span class="tech-chip">JavaScript</span>
+                    </div>
+
                     <button class="project-toggle" data-target="p3">Detail</button>
 
                     <div class="project-details" id="p3">
@@ -143,8 +176,19 @@
             <div class="project-card">
                 <img src="assets/gambar/Login.png" alt="Sistem Kepegawaian">
                 <div class="project-info">
-                    <h3>Sistem Informasi Kepegawaian BNN</h3>
+                    <div class="project-header">
+                        <h3>Sistem Informasi Kepegawaian BNN</h3>
+                        <span class="project-badge internal">Internal</span>
+                    </div>
+
                     <p>Sistem presensi, cuti, dan KGP pegawai berbasis Laravel 12.</p>
+
+                    <div class="tech-stack">
+                        <span class="tech-chip">Laravel 12</span>
+                        <span class="tech-chip">MySQL</span>
+                        <span class="tech-chip">AdminLTE</span>
+                        <span class="tech-chip">Leaflet Maps</span>
+                    </div>
 
                     <button class="project-toggle" data-target="p4">Detail</button>
 
@@ -173,8 +217,18 @@
             <div class="project-card">
                 <img src="assets/gambar/LoginVerif.png" alt="Login Website Verifikasi Device">
                 <div class="project-info">
-                    <h3>Website Verifikasi Device Email</h3>
+                    <div class="project-header">
+                        <h3>Website Verifikasi Device Email</h3>
+                        <span class="project-badge live">LIVE</span>
+                    </div>
+
                     <p>Aplikasi verifikasi perangkat menggunakan OTP yang dikirim ke email dan dibaca otomatis via IMAP.</p>
+
+                    <div class="tech-stack">
+                        <span class="tech-chip">PHP</span>
+                        <span class="tech-chip">IMAP</span>
+                        <span class="tech-chip">Bootstrap</span>
+                    </div>
 
                     <button class="project-toggle" data-target="p5">Detail</button>
 
@@ -206,8 +260,18 @@
             <div class="project-card">
                 <img src="assets/gambar/landingPage.png" alt="Landing Page Cidika Travel">
                 <div class="project-info">
-                    <h3>Cidika Travel – Website Open Trip Multibahasa</h3>
-                    <p>Platform open trip internasional dengan dukungan bahasa Indonesia, Inggris, dan Jepang.</p>
+                    <div class="project-header">
+                        <h3>Cidika Travel – Open Trip Multibahasa</h3>
+                        <span class="project-badge live">LIVE</span>
+                    </div>
+
+                    <p>Platform open trip internasional dengan dukungan Bahasa Indonesia, Inggris, dan Jepang.</p>
+
+                    <div class="tech-stack">
+                        <span class="tech-chip">React</span>
+                        <span class="tech-chip">Supabase</span>
+                        <span class="tech-chip">Tailwind CSS</span>
+                    </div>
 
                     <button class="project-toggle" data-target="p6">Detail</button>
 
